2000-08-09  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-cancellable-ops.c:
	(gnome_vfs_find_directory_cancellable):
	* libgnomevfs/gnome-vfs-cancellable-ops.h:
	* libgnomevfs/gnome-vfs-find-directory.c:
	(gnome_vfs_find_directory):
	* libgnomevfs/gnome-vfs-find-directory.h:
	* libgnomevfs/gnome-vfs-private-types.h:
	* modules/efs-method.c: (do_find_directory):
	* modules/extfs-method.c: (do_find_directory):
	* modules/translate-method.c: (tr_do_find_directory):
	Add a find_if_needed parameter to find_directory calls.
	
	* libgnomevfs/gnome-vfs-utils.c: (gnome_vfs_list_deep_free):
	* libgnomevfs/gnome-vfs-utils.h:
	* libgnomevfs/gnome-vfs-xfer.c: (gnome_vfs_xfer_uri_internal):
	Add a new utility call, moving it from gnome-vfs-xfer.c so I
	can share it with others.
	
	* modules/file-method.c: (GET_PATH_MAX), (get_path_from_uri),
	(get_base_from_uri), (append_to_path), (append_trash_path),
	(find_trash_in_one_hierarchy_level), (find_trash_in_hierarchy),
	(match_trash_item_by_device_id), (try_creating_trash_in),
	(find_trash_directory), (do_find_directory), (do_set_file_info):
	Work in progress on finding/creating Trash on non-home volumes.

Tue Aug 08 23:18:49 2000  George Lebl <jirka@5z.com>

	* libgnomevfs/Makefile.am,
	  libgnomevfs/gnome-vfs-application-registry.[ch]:
	  A new application registry.  The parsing is based upon
	  mime-info.  The interface completely hides any structures
	  and is based entierly on querying string keys.  Handles
	  user settings as a delta against the system settings.  Also
	  adds mime_types list support to the registry instead of this
	  being read from the keys file.

	* libgnomevfs/gnome-vfs-mime-handlers.[ch]
	  (gnome_vfs_mime_get_default_application)
	  (gnome_vfs_mime_get_short_list_applications)
	  (gnome_vfs_mime_get_all_applications)
	  (gnome_vfs_mime_extend_all_applications)
	  (gnome_vfs_mime_remove_from_all_applications)
	  (gnome_vfs_mime_application_new_from_id)
	  (application_known_to_be_nonexistent):