@@ -1,0 +1,64 @@
+/* test-mime.c - Test for the gnome_vfs_find_directory call
+   Virtual File System Library
+
+   Copyright (C) 2000 Eazel
+
+   The Gnome Library is free software; you can redistribute it and/or
+   modify it under the terms of the GNU Library General Public License as
+   published by the Free Software Foundation; either version 2 of the
+   License, or (at your option) any later version.
+
+   The Gnome Library is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+   Library General Public License for more details.
+
+   You should have received a copy of the GNU Library General Public
+   License along with the Gnome Library; see the file COPYING.LIB.  If not,
+   write to the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
+   Boston, MA 02111-1307, USA.
+
+   Author: Pavel Cisler <pavel@eazel.com>
+*/
+#ifdef HAVE_CONFIG_H
+#include <config.h>
+#endif
+
+#include "gnome-vfs.h"
+#include "gnome-vfs-uri.h"
+#include "gnome-vfs-find-directory.h"
+
+#include <stdio.h>
+
+int
+main (int argc, char **argv)
+{
+	GnomeVFSURI *uri;
+	GnomeVFSURI *result;
+	GnomeVFSResult error;
+	char *path;
+
+	
+	if (!gnome_vfs_init ()) {
+		fprintf (stderr, "Cannot initialize gnome-vfs.\n");
+		return 1;
+	}
+
+	if (argc == 1) {
+		fprintf (stderr, "Usage: %s near_uri \n", *argv);
+		return 1;
+	}
+
+
+	++argv;
+
+	uri = gnome_vfs_uri_new (*argv);
+	error = gnome_vfs_find_directory (uri, GNOME_VFS_DIRECTORY_KIND_TRASH, &result, TRUE, TRUE, 0777);
+	if (error == GNOME_VFS_OK) {
+		path = gnome_vfs_uri_to_string (result, GNOME_VFS_URI_HIDE_NONE);
+		g_print ("found trash at %s\n", path);
+		g_free (path);
+	}
+	
+	return 0;
+}
